--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property='og:title' content='uSwapp' />
   <meta property='og:description' content='Swap App' />
-  <meta property='og:image' content="https://raw.githubusercontent.com/oguzcan-ayan/uSwapp-Project-with-React/main/public/assets/images/uswapp-logo.svg" />
+  <meta property='og:image' content="https://raw.githubusercontent.com/oguzcan-ayan/uSwapp-Project-with-React/main/public/assets/images/uswapp-logo.jpg" />
   <meta property='og:url' content='https://uswapp.vercel.app/' />
   <meta property='og:type' content='website' />
   <title>uSwapp</title>
